mensagem de erro css

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ footer > span {
     font-weight: 700;
 }
 
-.sucess-record {
+.success-record {
     padding: 5px;
     text-align: center;
     width: 350px;
@@ -52,10 +52,10 @@ footer > span {
     background-color: #dcecdc;
 } 
 
-.sucess-record > div{
+.success-record > div{
     display: inline-block;
 }
-.sucess-record > div > svg{
+.success-record > div > svg{
     position: relative; 
     top: 2px;
     left: 2px;
@@ -63,5 +63,31 @@ footer > span {
 }
 
 #success-record-msg {
+    display: none;
+}
+
+.error-record {
+    padding: 5px;
+    text-align: center;
+    width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+    color:#bb5f5f;
+    background-color: #efd9ce;
+} 
+
+.error-record > div{
+    display: inline-block;
+}
+
+.error-record > div > svg{
+    position: relative; 
+    top: 2px;
+    left: 2px;
+    cursor: pointer;
+}
+
+#error-record-msg {
     display: none;
 }
